exports[`test basic test constructs 1`] = `
" PASS  __tests__/basic-test-constructs-test.js
  ✓ it
  ✓ test
  describe
    ✓ it
    ✓ test

"
`;

exports[`test basic test constructs 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       4 passed, 4 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`test only 1`] = `
" PASS  __tests__/only-constructs-test.js
  ✓ test.only
  ✓ it.only
  ✓ fit
  ○ 1 skipped tests
  fdescribe
    ✓ it
    ✓ test
  describe.only
    ✓ test
    describe
      ✓ test

"
`;

exports[`test only 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 skipped, 7 passed, 8 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`test only with expand arg 1`] = `
" PASS  __tests__/only-constructs-test.js
  ✓ test.only
  ✓ it.only
  ✓ fit
  ○ it
  fdescribe
    ✓ it
    ✓ test
  describe.only
    ✓ test
    describe
      ✓ test

"
`;

exports[`test only with expand arg 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 skipped, 7 passed, 8 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`test skips 1`] = `
" PASS  __tests__/skips-constructs-test.js
  ✓ it
  ○ 4 skipped tests
  xdescribe
    ○ 2 skipped tests
  describe.skip
    ○ 1 skipped tests
    describe
      ○ 1 skipped tests

"
`;

exports[`test skips 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       8 skipped, 1 passed, 9 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`test skips with expand arg 1`] = `
" PASS  __tests__/skips-constructs-test.js
  ✓ it
  ○ xtest
  ○ xit
  ○ it.skip
  ○ test.skip
  xdescribe
    ○ it
    ○ test
  describe.skip
    ○ test
    describe
      ○ test

"
`;

exports[`test skips with expand arg 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       8 skipped, 1 passed, 9 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`test tests with no implementation 1`] = `
" PASS  __tests__/only-constructs-test.js
  ✓ it
  ○ 2 skipped tests

"
`;

exports[`test tests with no implementation 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       2 skipped, 1 passed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`test tests with no implementation with expand arg 1`] = `
" PASS  __tests__/only-constructs-test.js
  ✓ it
  ○ it, no implementation
  ○ test, no implementation

"
`;

exports[`test tests with no implementation with expand arg 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       2 skipped, 1 passed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;
